@@ -235,6 +235,7 @@ public class RuleSetFactoryTest {
 		int invalidSinceAttributes = 0;
 		int invalidExternalInfoURL = 0;
 		int invalidClassName = 0;
+		int invalidSuppress = 0;
 		String messages = "";
 		// TODO Need to handle each Language
 		List<String> ruleSetFileNames = getRuleSetFileNames();
@@ -274,11 +275,16 @@ public class RuleSetFactoryTest {
 					invalidClassName++;
 					messages += "Rule " + fileName + "/" + rule.getName() + " seems to have an invalid 'class' value (" + rule.getRuleClass() + "), it should be:" + expectedClassName + PMD.EOL;
 				}
+				// Should not have violation suppress xpath property
+				if (rule.hasProperty(Rule.VIOLATION_SUPPRESS_XPATH_PROPERTY)) {
+					invalidSuppress++;
+					messages += "Rule " + fileName + "/" + rule.getName() + " should not have '" + Rule.VIOLATION_SUPPRESS_XPATH_PROPERTY + "', this is intended for end user customization only." + PMD.EOL;
+				}
 			}
 		}
 		// We do this at the end to ensure we test ALL the rules before failing the test
-		if ( invalidSinceAttributes > 0 || invalidExternalInfoURL > 0 || invalidClassName > 0 ) {
-			fail("All built-in PMD rules need 'since' attribute ("+ invalidSinceAttributes + " are missing), a proper ExternalURLInfo (" + invalidExternalInfoURL + " are invalid) and a class name meeting conventions ("+ invalidClassName + " are invalid)" + PMD.EOL + messages);
+		if ( invalidSinceAttributes > 0 || invalidExternalInfoURL > 0 || invalidClassName > 0 || invalidSuppress> 0) {
+			fail("All built-in PMD rules need 'since' attribute ("+ invalidSinceAttributes + " are missing), a proper ExternalURLInfo (" + invalidExternalInfoURL + " are invalid), a class name meeting conventions ("+ invalidClassName + " are invalid), and no '" + Rule.VIOLATION_SUPPRESS_XPATH_PROPERTY + "' violation suppression xpath property (" + invalidSuppress + " are invalid)" + PMD.EOL + messages);
 		}
 	}
 
