@@ -207,6 +207,7 @@ The following is relatively complete list of the major changes (this may not be
 New features:
 
 New Language 'xml' added, for writing XPathRules against XML documents
+Rules can now define a 'violationSuppressXPath' property to universally suppress violations on nodes which match the given relative XPath expression
 
 Other changes:
 
